--- a/mulam/padma-puranam/chaps.tex
+++ b/mulam/padma-puranam/chaps.tex
@@ -1866,9 +1866,9 @@
 {भवन्तौ येन कार्येण इहायातौ नरेश्वरौ}
 {तच्चापि कथ्यतां शीघ्रं कृत्यकालो हि वर्तते}% ५२
 
-ब्रुवाणमेवं सुग्रीवं भरतो रामचोदितः
 
-\twolineshloka
+\threelineshloka
+{ब्रुवाणमेवं सुग्रीवं भरतो रामचोदितः}
 {आचचक्षे च गमनं लङ्कायां राघवस्य तु}
 {तौ चाब्रवीच्च सुग्रीवो भवद्भ्यां सहितः पुरीम्}% ५३
 
@@ -2764,9 +2764,8 @@
 {यानादवतताराशु विरहात्क्लिन्नमानसः}
 {भ्रातर्भ्रातः पुनर्भ्रातर्भ्रातर्भ्रातर्वदन्मुहुः}% २८
 
-दृष्ट्वा समुत्तीर्णमिमं रामचन्द्रं सुरैर्युतम्
-
-\twolineshloka
+\threelineshloka
+{दृष्ट्वा समुत्तीर्णमिमं रामचन्द्रं सुरैर्युतम्}
 {भरतो भ्रातृविरहक्लिन्नं धीमान्ददर्श ह}
 {हर्षाश्रूणि प्रमुञ्चंश्च दण्डवत्प्रणनाम ह}% २९
 
@@ -3014,9 +3013,9 @@
 {सुमन्त्रिन्कुशली रामः सीतालक्ष्मणसंयुतः}
 {कथं मां स्मरते वीरो वनचारी सुदुःखिताम्}% १०
 
-इति सा विललापोच्चै रघुनाथस्मृतिं गता
 
 \twolineshloka
+इति सा विललापोच्चै रघुनाथस्मृतिं गता
 {न निवेद निजं किञ्चित्परकीयं विमोहिता}
 {सुमुखोऽपि तथा दृष्ट्वा दुःखितां मातरं भृशम्}% ११
 
@@ -5895,19 +5894,15 @@
 {यो देहिनामयमतीव सुहृत्स्वदेहो}
 {नावेक्षितः समुचितः क्षपितुं मदर्थे}% २१
 
-ये मे स्वधर्मनिरतस्य तपः समाधि-
-
-विद्यात्मयोगविजिता भगवत्प्रसादाः
-
-\twolineshloka
+\fourlineindentedshloka
+{ये मे स्वधर्मनिरतस्य तपः समाधि}
+{विद्यात्मयोगविजिता भगवत्प्रसादाः}
 {तानेव ते मदनुसेवनयाऽविरुद्धान्}
 {दृष्टिं प्रपश्य वितराम्यभयानशोकान्}% २२
 
-अन्ये पुनर्भगवतो भ्रुव उद्विजृम्भ-
-
-विस्रंसितार्थरचनाः किमुरुक्रमस्य
-
-\twolineshloka
+\fourlineindentedshloka
+{अन्ये पुनर्भगवतो भ्रुव उद्विजृम्भ-}
+{विस्रंसितार्थरचनाः किमुरुक्रमस्य}
 {सिद्धासि भुङ्क्ष्व विभवान्निजधर्मदोहान्}
 {दिव्यान्नरैर्दुरधिगान्नृपविक्रियाभिः}% २३
 
@@ -5919,11 +5914,9 @@
 
 \uvacha{सुकन्योवाच}
 
-राद्धं बत द्विजवृषैतदमोघयोग-
-
-मायाधिपे त्वयि विभो तदवैमि भर्तः
-
-\twolineshloka
+\fourlineindentedshloka
+{राद्धं बत द्विजवृषैतदमोघयोग-}
+{मायाधिपे त्वयि विभो तदवैमि भर्तः}
 {यस्तेऽभ्यधायि समयः सकृदङ्गसङ्गो}
 {भूयाद्गरीयसि गुणः प्रसवः सतीनाम्}% २५
 
@@ -6041,11 +6034,9 @@
 {बभ्राज उत्कचकुमुद्गणवानपीच्य}
 {स्ताराभिरावृत इवोडुपतिर्नभःस्थः}% ५२
 
-तेनाष्टलोकपविहारकुलाचलेन्द्र -
-
-द्रोणीष्वनङ्गसखमारुतसौभगासु
-
-\twolineshloka
+\fourlineindentedshloka
+{तेनाष्टलोकपविहारकुलाचलेन्द्र-}
+{द्रोणीष्वनङ्गसखमारुतसौभगासु}
 {सिद्धैर्नुतोद्युधुनिपातशिवस्वनासु}
 {रेमे चिरं धनदवल्ललनावरूथी}% ५३
 
@@ -6228,11 +6219,9 @@
 {तत्पादरेणुना स्वाङ्गं पवित्रं विदधाम्यहम्}
 {विचित्रतरवार्ताभिः पावये रसनां स्वकाम्}% ४१
 
-इत्यादि रामचरणस्मरणप्रबुद्ध-
-
-प्रेमव्रजप्रसृतगद्गदवागुदश्रुः
-
-\twolineshloka
+\fourlineindentedshloka
+{इत्यादि रामचरणस्मरणप्रबुद्ध-}
+{प्रेमव्रजप्रसृतगद्गदवागुदश्रुः}
 {श्रीरामचन्द्र रघुपुङ्गवधर्ममूर्ते}
 {भक्तानुकम्पकसमुद्धर संसृतेर्माम्}% ४२
 
@@ -6746,9 +6735,9 @@
 {तच्छ्रुत्वा तु वचस्तस्य सद्यः सम्प्राप्तविस्मयैः}
 {अस्माभिरप्यसौ दृष्टो देवः परमदुर्ल्लभः}% २८
 
-अन्नादिकं तत्र भुक्तं सर्वस्वादसमन्वितम्
 
-\twolineshloka
+
+{अन्नादिकं तत्र भुक्तं सर्वस्वादसमन्वितम्}
 {वयं चतुर्भुजा जाता देवस्य कृपया पुनः}
 {गत्वा त्वमपि देवस्य दर्शनं कुरु सत्तम}% २९
 
@@ -7724,9 +7713,9 @@
 {त्वयाज्ञप्तः करोत्यस्य विश्वस्य परिचेष्टितम्}
 {त्वत्तो जातं पुराणाद्यज्जगत्स्थास्नु चरिष्णु च}% ३०
 
-चेतनाशक्तिमाविश्य त्वमेनं चेतयस्यहो
 
-\twolineshloka
+\threelineshloka
+{चेतनाशक्तिमाविश्य त्वमेनं चेतयस्यहो}
 {तव जन्म तु नास्त्येव नान्तस्तव जगत्पते}
 {वृद्धिक्षयपरीणामास्त्वयि सन्त्येव नो विभो}% ३१
 
@@ -8166,11 +8155,9 @@
 {शराः सर्वत्र दृश्यन्ते कुञ्जरेषु हयेषु च}
 {परब्रह्मेव सर्वत्र व्याप्ताश्चान्तरगोचराः}% ७४
 
-तं राजपुत्रं शितबाणकोटिभि -
-
-र्व्याप्तं विधायाशु जगर्ज विक्रमी
-
-\twolineshloka
+\fourlineindentedshloka
+{तं राजपुत्रं शितबाणकोटिभि -}
+{र्व्याप्तं विधायाशु जगर्ज विक्रमी}
 {संहर्षयन्स्वीयगणान्परान्महान्}
 {कुर्वन्हृदा शून्यतमान्गतासुकान्}% ७५
 
@@ -8758,7 +8745,8 @@
 {सज्यं चापं विधायाशु बाणान्मुञ्चन्स्थिरोऽभवत्}
 {ते बाणाः शितपर्वाणः स्वर्णपुङ्खाः समन्ततः}% ३०
 
-दृश्यन्ते व्यापिनस्तत्र रणमध्ये सुदुर्भराः
+\onelineshloka*
+{दृश्यन्ते व्यापिनस्तत्र रणमध्ये सुदुर्भराः}
 
 \fourlineindentedshloka
 {तद्बाणजालं तरसा निहत्य}
@@ -12296,11 +12284,9 @@
 {गत्यासमं पवनवेगतिरस्करिण्या}
 {दृष्ट्वा स्त्रियः परमकौतुकधामदेहम्}% २२
 
-ऊचुः पतिं कमलमध्यपिशङ्गवर्णा -
-
-स्ताम्राधरप्रतिभयाहतविद्रुमाभाः
-
-\twolineshloka
+\fourlineindentedshloka
+{ऊचुः पतिं कमलमध्यपिशङ्गवर्णा -}
+{स्ताम्राधरप्रतिभयाहतविद्रुमाभाः}
 {दन्तव्रजप्रमितहास्यसुशोभिवक्त्राः}
 {कामस्य बाणनयनादिविमोहनाभाः}% २३
 
@@ -13020,9 +13006,9 @@
 {विव्याध भाले भूपाल पुत्रः पुष्कलसंज्ञकः}
 {तत्र लग्ना विरेजुस्ते त्रिकूटशिखराणि किम्}% ३८
 
-तैर्बाणैर्व्यथितो राजा जघान नवभिः शरैः
 
-\twolineshloka
+\threelineshloka
+{तैर्बाणैर्व्यथितो राजा जघान नवभिः शरैः}
 {हृदये पुष्कलं वीरं महाकोपसमन्वितः}
 {तैर्वत्सदन्तैर्बह्वस्रं पीतं रामानुजाङ्गजम्}% ३९
 
@@ -13098,9 +13084,9 @@
 {पुष्कलोऽपि चकारात्र कदनं रणमण्डले}
 {भिद्यन्ते गजशीर्षाणि पतन्ति मौक्तिकानि तु}% ५७
 
-दृश्यते लोमभिः पूर्णा ताम्रपर्णीव तन्नदी
 
-\twolineshloka
+\threelineshloka
+{दृश्यते लोमभिः पूर्णा ताम्रपर्णीव तन्नदी}
 {पुष्कलप्रहिता बाणा नृणामङ्गेषु सङ्गताः}
 {कुर्वन्ति प्राणविच्छेदं वीराणामपि सर्वतः}% ५८
 
@@ -16031,9 +16017,8 @@
 {सुरथो वीक्ष्य रामं च कृपार्थं सेवकात्मनः}
 {आगतं सकलं राज्यं सहयं सुमुदार्पयत्}% २८
 
-अनेकवरिवस्याभिः श्रीरामं समतोषयत्
-
-\twolineshloka
+\threelineshloka
+{अनेकवरिवस्याभिः श्रीरामं समतोषयत्}
 {कथयामास मेऽन्याय्यं कृतं ते क्षम राघव}
 {श्रीरामस्तमुवाचाथ कृतं ते वाहरक्षणम्}% २९
 
@@ -16839,9 +16824,9 @@
 {जगत्पवित्रसत्कीर्ति जानक्या वाच्यवाचनम्}
 {कथं समकरोत्स्वामी तन्मे कथय सुव्रत}% १
 
-यथा मे मनसः सौख्यं भविष्यति सुशोभनम्
 
-\twolineshloka
+\threelineshloka
+{यथा मे मनसः सौख्यं भविष्यति सुशोभनम्}
 {तथा कुरुष्व शेषाद्य त्वन्मुखान्निःसृतामृतम्}
 {पिबतस्तृप्तिरेव स्याद्यया संसृतिकृं तनम्}% २
 
@@ -17897,9 +17882,9 @@
 \onelineshloka
 {स वाक्यैः पविनातुल्यैर्भिन्नः सुभटशेखरः}% २१
 
-चुकोप हृदयेऽत्यतं जगाद वचनं पुनः
 
-\twolineshloka
+\threelineshloka
+{चुकोप हृदयेऽत्यतं जगाद वचनं पुनः}
 {कस्मिन्कुले समुत्पत्तिः किं नामासि च बालक}
 {त्वन्नाम नाभिजानामि कुलं शीलं वयस्तथा}% २२
 
@@ -18178,9 +18163,9 @@
 {स लवं प्रत्युवाचाथ पुष्कलः परमास्त्रवित्}
 {तिष्ठ दत्ते मया सङ्ख्ये रथे सुहयशोभिते}% २२
 
-पदातिना त्वया युद्धं करोमि किमथाहवे
 
-\twolineshloka
+\threelineshloka
+{पदातिना त्वया युद्धं करोमि किमथाहवे}
 {तस्मात्तिष्ठ रथे पश्चाद्युद्ध्येऽहं भवता सह}
 {एतद्वाक्यं निशम्यासौ लवः पुष्कलमब्रवीत्}% २३
 
@@ -18668,9 +18653,9 @@
 {बालका इति मामूचुः सहगन्तार एव हि}
 {ततोऽहं दुःखिता जाता निशम्य लवमाधृतम्}% ३१
 
-त्वं मोचय बलात्तस्मात्काले प्राप्तो नृपोत्तमात्
 
-\twolineshloka
+\threelineshloka
+{त्वं मोचय बलात्तस्मात्काले प्राप्तो नृपोत्तमात्}
 {निशम्य मातुर्वचनं कुशः कोपसमन्वितः}
 {जगाद तां दशन्नोष्ठं दन्तैर्दन्तान्विनिष्पिषन्}% ३२
 
@@ -18804,15 +18789,14 @@
 {अग्न्यस्त्रेण कुशः सर्वान्ददाह तरसा बली}
 {शमयामास तं भूपः पर्जन्यास्त्रेण वीर्यवान्}% ६३
 
-शमयामास तं भूपो वायव्येनातिविक्रमः
 
-\twolineshloka
+\threelineshloka
+{शमयामास तं भूपो वायव्येनातिविक्रमः}
 {तदा वायुरभूत्तीव्रः सर्वतो रणमण्डले}
 {पर्वतास्त्रेण तं वायुं क्षोभयन्तं समावृणोत्}% ६४
 
-वज्रास्त्रेण नृपः सङ्ख्ये चिच्छेद सनगोपलान्
-
-\twolineshloka
+\threelineshloka
+{वज्रास्त्रेण नृपः सङ्ख्ये चिच्छेद सनगोपलान्}
 {तदा नारायणास्त्रं स मुमोच कुश उद्भटः}
 {नारायणं तदा भूपं नाशकत्परिबाधितुम्}% ६५
 
@@ -19602,9 +19586,9 @@
 {चञ्चलौ चलचित्तौ तौ सर्वविद्याविशारदौ}
 {तदाहमतिसन्तोषं प्राप्तश्चाहं रघूत्तम}% १५
 
-दत्त्वा सर्वाणि चास्त्राणि मस्तके निहितः करः
 
-\twolineshloka
+\threelineshloka
+{दत्त्वा सर्वाणि चास्त्राणि मस्तके निहितः करः}
 {अतीवगानकुशलौ दृष्ट्वा लोका विसिष्मिरे}
 {षड्जमध्यमगान्धारस्वरभेदविशारदौ}% १६
 
@@ -19652,9 +19636,9 @@
 {श्रुत्वा सीतासुतौ देवः स चक्रेम्बरभूषणैः}
 {देवदत्तमिति ग्राह्यमिति मद्वाक्यगौरवात्}% २७
 
-आहृतं राजपुत्राभ्यां यद्दत्तं वरुणेन तत्
 
-\twolineshloka
+\threelineshloka
+{आहृतं राजपुत्राभ्यां यद्दत्तं वरुणेन तत्}
 {प्रसन्नेन तयोर्वाद्यगानविद्यावयोगुणैः}
 {ततो मामब्रवीत्सीतामुद्दिश्य वरुणः कृती}% २८
 
@@ -20130,9 +20114,9 @@
 {एकदा गतवान्विप्रो वाल्मीकिर्विपिनं महत्}
 {यत्र तालास्तमालाश्च किंशुका यत्र पुष्पिताः}% १४३
 
-केतकी यत्र रजसा कुर्वती सौरभं वनम्
 
-\twolineshloka
+\threelineshloka
+{केतकी यत्र रजसा कुर्वती सौरभं वनम्}
 {शशिप्रभेव महती दृश्यते शुभ्रकर्णभृत्}
 {चम्पकोबकुलश्चापि कोविदारः कुरण्टकः}% १४४
 
@@ -20168,9 +20152,9 @@
 {ऊचुर्मुनिं प्रहृष्टास्ते शंसन्तः साधुसाध्विति}
 {स्वामिञ्छापोदिते वाक्ये भारतीश्लोकमातनोत्}% १५२
 
-अत्यन्तं मोहनो जातः श्लोकोऽयं मुनिसत्तम
 
-\twolineshloka
+\threelineshloka
+{अत्यन्तं मोहनो जातः श्लोकोऽयं मुनिसत्तम}
 {तदा मुनिः प्रहृष्टात्मा बभूव वाडवर्षभ}
 {तस्मिन्काले समागत्य ब्रह्मा पुत्रैः समन्वितः}% १५३
 
@@ -20803,7 +20787,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे श्रवणपठनपुण्यवर्णनं नामाष्टषष्टितमोऽध्यायः॥६८॥}
 
-इति रामाश्वमेधप्रकरणं समाप्तम्
+{॥इति रामाश्वमेधप्रकरणं समाप्तम्॥}
 
 ===
 
@@ -21183,9 +21167,9 @@
 {नाभ्यां ब्रह्मशिवौ तस्य कर्णयोश्च दिशः शुभाः}
 {नेत्रयोर्वह्निसूर्यौ च घ्राणे वायुं महाजवम्}% ८७
 
-सर्वोपनिषदामर्थं दृष्ट्वा तस्य विभूतयः
 
-\twolineshloka
+\threelineshloka
+{सर्वोपनिषदामर्थं दृष्ट्वा तस्य विभूतयः}
 {कृत्स्ना भीता वरारोहा प्रणम्य च पुनः पुनः}
 {हर्षाश्रुपूर्णनयना प्राञ्जलिर्वाक्यमब्रवीत्}% ८८
 
@@ -21662,9 +21646,9 @@
 {ब्रह्माणमिन्द्रं रुद्रं च यमं वरुणमेव च}
 {शरणार्थी जगामाशु वायसः शस्त्रपीडितः}% २०१
 
-तं दृष्ट्वा वायसं सर्वे रुद्राद्या देव दानवाः
 
-\twolineshloka
+\threelineshloka
+{तं दृष्ट्वा वायसं सर्वे रुद्राद्या देव दानवाः}
 {न शक्ताः स्म वयं त्रातुमिति प्राहुर्मनीषिणः}
 {अथ प्रोवाच भगवान्ब्रह्मा त्रिभुवनेश्वरः}% २०२
 
@@ -21813,7 +21797,8 @@
 
 \uvacha{महेश्वर उवाच}
 
-इत्युक्तः स तदा रामः सम्प्रहस्याब्रवीद्वचः
+\onelineshloka*
+{इत्युक्तः स तदा रामः सम्प्रहस्याब्रवीद्वचः}
 
 \uvacha{राम उवाच}
 
@@ -22214,9 +22199,9 @@
 {उवाच राघवः सीतां गर्हितं वचनं बहु}
 {सा तेन गर्हिता साध्वी विवेश चानलं महत्}% ३२९
 
-ततो देवगणास्सर्वे शिवब्रह्मपुरोगमाः
 
-\twolineshloka
+\threelineshloka
+{ततो देवगणास्सर्वे शिवब्रह्मपुरोगमाः}
 {दृष्ट्वा तु मातरं वह्नौ प्रविशन्तीं भयातुराः}
 {समागम्य रघुश्रेष्ठं सर्वे प्राञ्जलयोऽब्रुवन्}% ३३०
 
@@ -22260,9 +22245,9 @@
 
 \uvacha{ईश्वर उवाच}
 
-एतस्मिन्नन्तरे तत्र लोकसाक्षी स पावकः
 
-\twolineshloka
+\threelineshloka
+{एतस्मिन्नन्तरे तत्र लोकसाक्षी स पावकः}
 {आदाय सीतां रामाय प्रददौ सुरसन्निधौ}
 {अब्रवीत्तत्र काकुत्स्थं वह्निः सर्वशरीरगः}% ३४०
 
@@ -22597,9 +22582,9 @@
 {निर्विघ्नं सर्वकार्येषु सर्वारम्भेषु वै नृणाम्}
 {यंयं कामयते मर्त्यः सुदुर्लभमनोरथम्}% ४९
 
-षण्मासात्सिद्धिमाप्नोति स्तवस्यास्य प्रसादतः
 
-\twolineshloka
+\threelineshloka
+{षण्मासात्सिद्धिमाप्नोति स्तवस्यास्य प्रसादतः}
 {यत्पुण्यं सर्वतीर्थेषु सर्वयज्ञेषु यत्फलम्}
 {तत्फलं कोटिगुणितं स्तवेनानेन लभ्यते}% ५०
 
@@ -22693,9 +22678,9 @@
 
 \uvacha{वाल्मीकिरुवाच}
 
-अपापां मैथिलीं राम त्यक्तुं नार्हसि सुव्रत
 
-\twolineshloka
+\threelineshloka
+{अपापां मैथिलीं राम त्यक्तुं नार्हसि सुव्रत}
 {इयं तु विरजा साध्वी भास्करस्य प्रभा यथा}
 {अनन्या तव काकुत्स्थ कस्मात्त्यक्ता त्वयानघ}% १८
 
@@ -22791,9 +22776,9 @@
 
 \uvacha{महेश्वर उवाच}
 
-तथेति च प्रतिश्रुत्य रामो राजीवलोचनः
 
-\twolineshloka
+\threelineshloka
+{तथेति च प्रतिश्रुत्य रामो राजीवलोचनः}
 {द्वास्थं कृत्वा तु सौमित्रिं कालो वाक्यमभाषत}
 {वैवस्वतोऽब्रवीद्वाक्यं रामं दशरथात्मजम्}% ३९
 
@@ -22832,7 +22817,8 @@
 
 \uvacha{दुर्वासा उवाच}
 
-शापं दास्यामि काकुत्स्थं रामं न यदि दर्शये
+\onelineshloka*
+{शापं दास्यामि काकुत्स्थं रामं न यदि दर्शये}
 
 \uvacha{महेश्वर उवाच}
 
@@ -22902,7 +22888,8 @@
 
 \uvacha{राम उवाच}
 
-राज्यं प्रशास धर्मेण मा प्रतिज्ञां वृथा कृथाः
+\onelineshloka*
+{राज्यं प्रशास धर्मेण मा प्रतिज्ञां वृथा कृथाः}
 
 \twolineshloka
 {यावच्चन्द्रश्च सूर्यश्च यावत्तिष्ठति मेदिनी}
@@ -23059,9 +23046,9 @@
 {विमुक्तो वैष्णवं लोकं पुत्रदारसबान्धवैः}
 {समाप्नुयाद्योगगम्यमनायासेन वै नरः}% ९४
 
-एतत्ते कथितं देवि रामस्य चरितं महत्
 
-\twolineshloka
+\onelineshloka
+{एतत्ते कथितं देवि रामस्य चरितं महत्}
 {धन्योऽस्म्यहं त्वया देवि रामचन्द्रस्य कीर्त्तनात्}
 {किमन्यच्छ्रोतुकामासि तद्ब्रवीमि वरानने}% ९५
 
