incorrect anusvara at verse middle/end

--- a/mulam/padma-puranam/chaps.tex
+++ b/mulam/padma-puranam/chaps.tex
@@ -4,11 +4,11 @@
 \uvacha{भीष्म उवाच}
 
 \twolineshloka
-{उक्तं भगवता सर्वं पुराणाश्रयसंयुतं}
-{तथा श्वेतेन ब्रह्माण्डं गुरवे प्रतिपादितं}% १
+{उक्तं भगवता सर्वं पुराणाश्रयसंयुतम्}
+{तथा श्वेतेन ब्रह्माण्डं गुरवे प्रतिपादितम्}% १
 
 \twolineshloka
-{श्रुत्वैतत्कौतुकं जातं यथा तेनास्थिलेहनं}
+{श्रुत्वैतत्कौतुकं जातं यथा तेनास्थिलेहनम्}
 {कृतं क्षुधापनोदार्थे अन्नदानाद्विना द्विज}% २
 
 \twolineshloka
@@ -288,7 +288,7 @@
 {तस्मिन्सरसि तप्यन्तं तापसं सुमहत्तपः}% ६८
 
 \twolineshloka
-{ददर्श राघवो भीमं लम्बमानमधोमुखं}
+{ददर्श राघवो भीमं लम्बमानमधोमुखम्}
 {तमुपागम्य काकुत्स्थस्तप्यमानं तु तापसम्}% ६९
 
 \twolineshloka
@@ -353,7 +353,7 @@
 
 \twolineshloka
 {शूद्रं मां विद्धि काकुत्स्थ शम्बूकं नाम नामतः}
-{भाषतस्तस्य काकुत्स्थः खड्गं तु रुचिरप्रभं}% ८५
+{भाषतस्तस्य काकुत्स्थः खड्गं तु रुचिरप्रभम्}% ८५
 
 \twolineshloka
 {निष्कृष्य कोशाद्विमलं शिरश्चिच्छेद राघवः}
@@ -372,7 +372,7 @@
 {गृहाण च वरं राम यमिच्छसि महाव्रत}% ८९
 
 \twolineshloka
-{त्वत्कृतेन हि शूद्रोऽयं सशरीरोऽभ्यगाद्दिवं}
+{त्वत्कृतेन हि शूद्रोऽयं सशरीरोऽभ्यगाद्दिवम्}
 {देवानां भाषितं श्रुत्वा राघवः सुसमाहितः}% ९०
 
 \twolineshloka
@@ -430,7 +430,7 @@
 {पूर्वमेव सभायां च यो मां द्रष्टुं समागतः}% २
 
 \twolineshloka
-{तदहं देवतादेशात्तत्कार्यार्थे महामुनिं}
+{तदहं देवतादेशात्तत्कार्यार्थे महामुनिम्}
 {पश्यामि तं मुनिं गत्वा देवदानवपूजितम्}% ३
 
 \twolineshloka
@@ -482,7 +482,7 @@
 {अर्घ्यमादाय सुप्रीतः सर्वांस्तानभ्यपूजयत्}% १५
 
 \twolineshloka
-{ते तु गृह्य ततः पूजां सम्भाष्य च महामुनिं}
+{ते तु गृह्य ततः पूजां सम्भाष्य च महामुनिम्}
 {जग्मुस्तेन तदा हृष्टा नाकपृष्ठं सहानुगाः}% १६
 
 \twolineshloka
@@ -518,7 +518,7 @@
 {अतस्त्वं पूजनीयो वै मम नित्यं हृदिस्थितः}% २३
 
 \twolineshloka
-{सुरा हि कथयन्ति त्वां शूद्रघातिनमागतं}
+{सुरा हि कथयन्ति त्वां शूद्रघातिनमागतम्}
 {ब्राह्मणस्य च धर्मेण त्वया वै जीवितः सुतः}% २४
 
 \twolineshloka
@@ -563,7 +563,7 @@
 
 \twolineshloka
 {अप्यकार्यशतं कृत्वा भर्तव्या मनुरब्रवीत्}
-{नाहं प्रतीच्छे विप्रर्षे त्वया दत्तं प्रतिग्रहं}% ३५
+{नाहं प्रतीच्छे विप्रर्षे त्वया दत्तं प्रतिग्रहम्}% ३५
 
 \onelineshloka
 {न च मे भवता कोपः कार्यो वै सुरपूजित}% ३६
@@ -575,7 +575,7 @@
 {भवान्वै तारणे शक्तस्त्रैलोक्यस्यापि राघव}% ३७
 
 \twolineshloka
-{तारय ब्राह्मणं राम विशेषेण तपस्विनं}
+{तारय ब्राह्मणं राम विशेषेण तपस्विनम्}
 {तस्मात्प्रदास्ये विधिवत्प्रतीच्छस्व नराधिप}% ३८
 
 \uvacha{राम उवाच}
@@ -595,7 +595,7 @@
 {सुराणां विद्यते राजा देवदेवः शतक्रतुः}% ४१
 
 \twolineshloka
-{श्रेयसेस्मासु लोकेश पार्थिवं कुरु साम्प्रतं}
+{श्रेयसेस्मासु लोकेश पार्थिवं कुरु साम्प्रतम्}
 {यस्मिन्पूजां प्रयुञ्जानाः पुरुषा भुञ्जते महीम्}% ४२
 
 \twolineshloka
@@ -624,7 +624,7 @@
 
 \twolineshloka
 {ततो रामः प्रजग्राह मुनेर्हस्तान्महात्मनः}
-{दिव्यमाभरणं चित्रं प्रदीप्तमिव भास्करं}% ४९
+{दिव्यमाभरणं चित्रं प्रदीप्तमिव भास्करम्}% ४९
 
 \twolineshloka
 {प्रतिगृह्य ततोगस्त्याद्राघवः परवीरहा}
@@ -837,7 +837,7 @@
 {भक्षिते च स्वके देहे पुनरन्यन्न मे विभो}% १०१
 
 \twolineshloka
-{क्षुधानिवारणं नैव देहस्यास्य विनौदनं}
+{क्षुधानिवारणं नैव देहस्यास्य विनौदनम्}
 {खादामि ह्यक्षयं देव प्रियं मे न हि जायते}% १०२
 
 \twolineshloka
@@ -886,7 +886,7 @@
 
 \twolineshloka
 {एवं मे चिन्तयानस्य गतं वर्षशतन्त्विह}
-{सोगस्त्यो हि गतिर्ब्रह्मन्मुनिर्मे भविता ध्रुवं}% ११४
+{सोगस्त्यो हि गतिर्ब्रह्मन्मुनिर्मे भविता ध्रुवम्}% ११४
 
 \twolineshloka
 {न गतिर्भविता मह्यं कुम्भयोनिमृते द्विजम्}
@@ -943,7 +943,7 @@
 
 \twolineshloka
 {मयोक्तोसौ विमानेन जगाम त्रिदिवं पुनः}
-{तेन मे शक्रतुल्येन दत्तमाभरणं शुभं}% १३०
+{तेन मे शक्रतुल्येन दत्तमाभरणं शुभम्}% १३०
 
 \twolineshloka
 {तस्मिन्निमित्ते काकुत्स्थ दत्तमद्भुतकर्मणा}
@@ -963,14 +963,14 @@
 
 \twolineshloka
 {भगवंस्तद्वनं घोरं यत्रासौ तप्तवांस्तपः}
-{श्वेतो वैदर्भको राजा तदद्भुतमभूत्कथं}% २
+{श्वेतो वैदर्भको राजा तदद्भुतमभूत्कथम्}% २
 
 \twolineshloka
-{विषमं तद्वनं राजा शून्यं मृगविवर्जितं}
+{विषमं तद्वनं राजा शून्यं मृगविवर्जितम्}
 {प्रविष्टस्तप आस्थातुं कथं वद महामुने}% ३
 
 \twolineshloka
-{समन्ताद्योजनशतं निर्मनुष्यमभूत्कथं}
+{समन्ताद्योजनशतं निर्मनुष्यमभूत्कथम्}
 {भवान्कथं प्रविष्टस्तद्येन कार्येण तद्वद}% ४
 
 \uvacha{अगस्त्य उवाच}
@@ -1036,7 +1036,7 @@
 {ततः स दण्डः काकुत्स्थ बहुवर्षगणायुतम्}% १९
 
 \twolineshloka
-{अकारयत्तु धर्मात्मा राज्यं निहतकण्टकं}
+{अकारयत्तु धर्मात्मा राज्यं निहतकण्टकम्}
 {अथ काले तु कस्मिंश्चिद्राजा भार्गवमाश्रमम्}% २०
 
 \twolineshloka
@@ -1341,19 +1341,19 @@
 
 \twolineshloka
 {गृध्रोलूकौ विवदन्तौ पृच्छति स्म रघूत्तमः}
-{कति वर्षाणि भो गृध्र तवेदं निलयं कृतं}% ९६
+{कति वर्षाणि भो गृध्र तवेदं निलयं कृतम्}% ९६
 
 \twolineshloka
 {एतन्मे कौतुकं ब्रूहि यदि जानासि तत्त्वतः}
-{एतच्छ्रुत्वा वचो गृध्रो बभाषे राघवं स्थितं}% ९७
+{एतच्छ्रुत्वा वचो गृध्रो बभाषे राघवं स्थितम्}% ९७
 
 \twolineshloka
 {इयं वसुमती राम मानुषैर्बहुबाहुभिः}
-{उच्छ्रितैराचिता सर्वा तदाप्रभृति मद्गृहं}% ९८
+{उच्छ्रितैराचिता सर्वा तदाप्रभृति मद्गृहम्}% ९८
 
 \twolineshloka
 {उलूकस्त्वब्रवीद्रामं पादपैरुपशोभिता}
-{यदैव पृथिवी राजंस्तदाप्रभृति मे गृहं}% ९९
+{यदैव पृथिवी राजंस्तदाप्रभृति मे गृहम्}% ९९
 
 \twolineshloka
 {एतच्छ्रुत्वा तु रामो वै सभासद उवाचह}
@@ -1368,7 +1368,7 @@
 {न वक्ति च श्रुतं यश्च कामात्क्रोधात्तथा भयात्}% १०२
 
 \twolineshloka
-{सहस्रं वारुणाः पाशाः प्रतिमुञ्चन्ति तं नरं}
+{सहस्रं वारुणाः पाशाः प्रतिमुञ्चन्ति तं नरम्}
 {तेषां संवत्सरे पूर्णे पाश एकः प्रमुच्यते}% १०३
 
 \twolineshloka
@@ -1388,16 +1388,16 @@
 {सचिवानां वचः श्रुत्वा रामो वचनमब्रवीत्}% १०७
 
 \twolineshloka
-{श्रूयतामभिधास्यामि पुराणं यदुदाहृतं}
+{श्रूयतामभिधास्यामि पुराणं यदुदाहृतम्}
 {द्यौः सचन्द्रार्कनक्षत्रा सपर्वतमहीद्रुमम्}% १०८
 
 \twolineshloka
-{सलिलार्णवसम्मग्नं त्रैलोक्यं सचराचरं}
-{एकमेव तदा ह्यासीत्सर्वमेकमिवाम्बरं}% १०९
+{सलिलार्णवसम्मग्नं त्रैलोक्यं सचराचरम्}
+{एकमेव तदा ह्यासीत्सर्वमेकमिवाम्बरम्}% १०९
 
 \twolineshloka
 {पुनर्भूः सह लक्ष्म्या च विष्णोर्जठरमाविशत्}
-{तां निगृह्य महातेजाः प्रविश्य सलिलार्णवं}% ११०
+{तां निगृह्य महातेजाः प्रविश्य सलिलार्णवम्}% ११०
 
 \twolineshloka
 {सुष्वाप हि कृतात्मा स बहुवर्षशतान्यपि}
@@ -1405,7 +1405,7 @@
 
 \twolineshloka
 {बहुस्रोतं च तं ज्ञात्वा महायोगी समाविशत्}
-{नाभ्यां विष्णोः समुद्भूतं पद्मं हेमविभूषितं}% ११२
+{नाभ्यां विष्णोः समुद्भूतं पद्मं हेमविभूषितम्}% ११२
 
 \twolineshloka
 {स तु निर्गम्य वै ब्रह्मा योगी भूत्वा महाप्रभुः}
@@ -1421,7 +1421,7 @@
 
 \twolineshloka
 {दृष्ट्वा प्रजापतिं तत्र क्रोधाविष्टावुभौ नृप}
-{वेगेन महता भोक्तुं स्वयम्भुवमधावतां}% ११६
+{वेगेन महता भोक्तुं स्वयम्भुवमधावताम्}% ११६
 
 \twolineshloka
 {दृष्ट्वा सत्वानि सर्वाणि निस्सरन्ति पृथक्पृथक्}
@@ -1473,7 +1473,7 @@
 
 \twolineshloka
 {गृध्रत्वं त्यज्य वै शीघ्रं दिव्यगन्धानुलेपनः}
-{पुरुषो दिव्यरूपोऽसौ बभाषे तं नराधिपं}% १२९
+{पुरुषो दिव्यरूपोऽसौ बभाषे तं नराधिपम्}% १२९
 
 \twolineshloka
 {साधु राघव धर्मज्ञ त्वत्प्रसादादहं विभो}
@@ -1485,11 +1485,11 @@
 
 \twolineshloka
 {अहं सन्ध्यामुपासित्वा गमिष्ये यत्र वै मुनिः}
-{अथोदकमुपस्पृश्य सन्ध्यामन्वास्य पश्चिमां}% १३२
+{अथोदकमुपस्पृश्य सन्ध्यामन्वास्य पश्चिमाम्}% १३२
 
 \twolineshloka
 {आश्रमं प्राविशद्रामः कुम्भयोनेर्महात्मनः}
-{तस्यागस्त्यो बहुगुणं फलमूलं च सादरं}% १३३
+{तस्यागस्त्यो बहुगुणं फलमूलं च सादरम्}% १३३
 
 \twolineshloka
 {रसवन्ति च शाकानि भोजनार्थमुपाहरत्}
@@ -1509,11 +1509,11 @@
 
 \twolineshloka
 {दिष्ट्या चाहं भविष्यामि पावनात्मा महात्मनः}
-{एवं ब्रुवति काकुत्स्थे वाक्यमद्भुतदर्शनं}% १३८
+{एवं ब्रुवति काकुत्स्थे वाक्यमद्भुतदर्शनम्}% १३८
 
 \twolineshloka
 {उवाच परमप्रीतो बाष्पनेत्रस्तपोधनः}
-{अत्यद्भुतमिदं वाक्यं तव राम शुभाक्षरं}% १३९
+{अत्यद्भुतमिदं वाक्यं तव राम शुभाक्षरम्}% १३९
 
 \twolineshloka
 {पावनं सर्वभूतानां त्वयोक्तं रघुनन्दन}
@@ -1525,7 +1525,7 @@
 
 \twolineshloka
 {ते हता ब्रह्मदण्डेन सद्यो नरकगामिनः}
-{ईदृशस्त्वं रघुश्रेष्ठ पावनः सर्वदेहिनां}% १४२
+{ईदृशस्त्वं रघुश्रेष्ठ पावनः सर्वदेहिनाम्}% १४२
 
 \twolineshloka
 {कथयन्तश्च लोकास्त्वां सिद्धिमेष्यन्ति राघव}
@@ -1549,10 +1549,10 @@
 
 \twolineshloka
 {अयोध्यां प्राप्य काकुत्स्थः पद्भ्यां कक्षामवातरत्}
-{ततो विसृज्य रुचिरं पुष्पकं कामवाहितं}% १४८
+{ततो विसृज्य रुचिरं पुष्पकं कामवाहितम्}% १४८
 
 \twolineshloka
-{कक्षान्तराद्विनिष्क्रम्य द्वास्थान्राजाऽब्रवीदिदं}
+{कक्षान्तराद्विनिष्क्रम्य द्वास्थान्राजाऽब्रवीदिदम्}
 {लक्ष्मणं भरतं चैव गच्छध्वं लघुविक्रमाः}% १४९
 
 \twolineshloka
@@ -1568,11 +1568,11 @@
 {समालिङ्ग्य तु रामस्तौ वाक्यं चेदमुवाच ह}% १५२
 
 \twolineshloka
-{कृतं मया यथातथ्यं द्विजकार्यमनुत्तमं}
+{कृतं मया यथातथ्यं द्विजकार्यमनुत्तमम्}
 {धर्महेतुमतो भूयः कर्तुमिच्छामि राघवौ}% १५३
 
 \twolineshloka
-{भवद्भ्यामात्मभूताभ्यां राजसूयं क्रतूत्तमं}
+{भवद्भ्यामात्मभूताभ्यां राजसूयं क्रतूत्तमम्}
 {सहितो यष्टुमिच्छामि यत्र धर्मश्च शाश्वतः}% १५४
 
 \twolineshloka
@@ -1600,7 +1600,7 @@
 {महीपालाश्च सर्वे त्वां प्रजापतिमिवामराः}% १५९
 
 \twolineshloka
-{निरीक्षन्ते महात्मानो लोकनाथ तथा वयं}
+{निरीक्षन्ते महात्मानो लोकनाथ तथा वयम्}
 {प्रजाश्च पितृवद्राजन्पश्यन्ति त्वां महामते}% १६०
 
 \twolineshloka
@@ -1969,7 +1969,7 @@
 {एवं वदति रामे तु पुष्पके च व्यवस्थिते}% ७७
 
 \twolineshloka
-{तत्र ये राक्षसवरास्ते गत्वाशु विभीषणं}
+{तत्र ये राक्षसवरास्ते गत्वाशु विभीषणम्}
 {प्राप्तो रामः ससुग्रीवश्चारा इत्थं तदाऽवदन्}% ७८
 
 \twolineshloka
@@ -1978,7 +1978,7 @@
 
 \twolineshloka
 {अलङ्कृत्य पुरीं तां तु निष्क्रान्तः सचिवैः सह}
-{दृष्ट्वा रामं विमानस्थं मेराविव दिवाकरं}% ८०
+{दृष्ट्वा रामं विमानस्थं मेराविव दिवाकरम्}% ८०
 
 \twolineshloka
 {अष्टाङ्गप्रणिपातेन नत्वा राघवमब्रवीत्}
@@ -1986,7 +1986,7 @@
 
 \twolineshloka
 {यद्दृष्टौ देवचरणौ जगद्वन्द्यावनिन्दितौ}
-{कृतः श्लाघ्योस्म्यहं देव शक्रादीनां दिवौकसां}% ८२
+{कृतः श्लाघ्योस्म्यहं देव शक्रादीनां दिवौकसाम्}% ८२
 
 \twolineshloka
 {आत्मानमधिकं मन्ये त्रिदशेशात्पुरन्दरात्}
@@ -2002,7 +2002,7 @@
 
 \twolineshloka
 {हत्वा तु पापकर्माणं दत्ता पूर्वं पुरी मम}
-{इयं पुरी इमे दारा अमी पुत्रास्तथा ह्यहं}% ८६
+{इयं पुरी इमे दारा अमी पुत्रास्तथा ह्यहम्}% ८६
 
 \twolineshloka
 {सर्वमेतन्मया दत्तं सर्वमक्षयमस्तु ते}
@@ -2017,7 +2017,7 @@
 {तेषामुपायनं सर्वं भरतो रामचोदितः}% ८९
 
 \twolineshloka
-{जग्राह वानरेन्द्रश्च धनरत्नौघसञ्चयं}
+{जग्राह वानरेन्द्रश्च धनरत्नौघसञ्चयम्}
 {एवं तत्र त्र्यहं रामो ह्यवसद्राक्षसालये}% ९०
 
 \twolineshloka
@@ -2199,7 +2199,7 @@
 {वेलावनं समासाद्य रामः पूजां रमापतेः}% १३२
 
 \twolineshloka
-{कृत्वा रामेश्वरं नाम्ना देवदेवं जनार्दनं}
+{कृत्वा रामेश्वरं नाम्ना देवदेवं जनार्दनम्}
 {अभिषिच्याथ सङ्गृह्य वामनं रघुनन्दनः}% १३३
 
 \twolineshloka
@@ -2386,11 +2386,11 @@
 
 \twolineshloka
 {अयोध्यां स्वपुरीं गत्वा सुरलोकं व्रजस्व च}
-{विसृष्टो ब्रह्मणा रामः प्रणिपत्य पितामहं}% १७७
+{विसृष्टो ब्रह्मणा रामः प्रणिपत्य पितामहम्}% १७७
 
 \twolineshloka
 {आरूढः पुष्पकं यानं सम्प्राप्तो मधुरां पुरीम्}
-{समीक्ष्य पुत्रसहितं शत्रुघ्नं शत्रुघातिनं}% १७८
+{समीक्ष्य पुत्रसहितं शत्रुघ्नं शत्रुघातिनम्}% १७८
 
 \twolineshloka
 {तुतोष राघवः श्रीमान्भरतः स हरीश्वरः}
@@ -2401,8 +2401,8 @@
 {उत्थाप्य चाङ्कमारोप्य रामो भ्रातरमञ्जसा}% १८०
 
 \twolineshloka
-{भरतश्च ततः पश्चात्सुग्रीवस्तदनन्तरं}
-{उपविष्टोऽथ रामाय सोऽर्घमादाय सत्वरं}% १८१
+{भरतश्च ततः पश्चात्सुग्रीवस्तदनन्तरम्}
+{उपविष्टोऽथ रामाय सोऽर्घमादाय सत्वरम्}% १८१
 
 \twolineshloka
 {राज्यं निवेदयामास चाष्टाङ्गं राघवे तदा}
@@ -2425,7 +2425,7 @@
 {एवमुक्त्वा ततो रामः प्राप्तो मध्यन्दिने रवौ}% १८६
 
 \twolineshloka
-{महोदयं समासाद्य गङ्गातीरे स वामनं}
+{महोदयं समासाद्य गङ्गातीरे स वामनम्}
 {प्रतिष्ठाप्य द्विजानाह भाविनः पार्थिवांस्तथा}% १८७
 
 \twolineshloka
@@ -2441,7 +2441,7 @@
 {ग्रामान्दत्वा धनं तच्च लङ्काया आहृतं च यत्}% १९०
 
 \twolineshloka
-{प्रेषयित्वा च किष्किन्धां सुग्रीवं वानरेश्वरं}
+{प्रेषयित्वा च किष्किन्धां सुग्रीवं वानरेश्वरम्}
 {अयोध्यामागतो रामः पुष्पकं तमथाब्रवीत्}% १९१
 
 \twolineshloka
@@ -3014,8 +3014,8 @@
 {कथं मां स्मरते वीरो वनचारी सुदुःखिताम्}% १०
 
 
-\twolineshloka
-इति सा विललापोच्चै रघुनाथस्मृतिं गता
+\threelineshloka
+{इति सा विललापोच्चै रघुनाथस्मृतिं गता}
 {न निवेद निजं किञ्चित्परकीयं विमोहिता}
 {सुमुखोऽपि तथा दृष्ट्वा दुःखितां मातरं भृशम्}% ११
 
@@ -4433,11 +4433,9 @@
 {शत्रुघ्न गच्छ वाहस्य मार्गं भद्रं भवेत्तव}
 {भवेतां शत्रुविजयौ रिपुकर्षण ते भुजौ}% ५६
 
-ये योद्धारः प्रतिरणगतास्ते त्वया वारणीया-
-
-वाहं रक्ष स्वकगुणगणैः संयुतः सन्महोर्व्याम्
-
-\twolineshloka
+\fourlineindentedshloka
+{ये योद्धारः प्रतिरणगतास्ते त्वया वारणीया-}
+{वाहं रक्ष स्वकगुणगणैः संयुतः सन्महोर्व्याम्}
 {सुप्तान्भ्रष्टान्विगतवसनान्भीतभीतांस्तु नम्रां-}
 {स्तान्मा हन्याः सुकृतकृतिनो येन शंसन्ति कर्म}% ५७
 
@@ -5498,11 +5496,9 @@
 {भेरीपणवतूर्याणां वीणादीनां स्वनस्तदा}
 {व्याप्नोति स्म महाराज सुमदेन प्रणोदितः}% ६३
 
-कन्याः समागत्य महानरेन्द्रं -
-
-शत्रुघ्नमिन्द्रादिकसेविताङ्घ्रिम्
-
-\twolineshloka
+\fourlineindentedshloka
+{कन्याः समागत्य महानरेन्द्रं -}
+{शत्रुघ्नमिन्द्रादिकसेविताङ्घ्रिम्}
 {करिस्थिता मौक्तिकवृन्दसङ्घै-}
 {र्वर्धापयामासुरिनप्रयुक्ताः}% ६४
 
@@ -5836,11 +5832,9 @@
 {कदाचिद्देवभिषजावागतावाश्रमे मुनेः}
 {स्वागतेन सुसम्भाव्य तयोः पूजां चकार सा}% ८
 
-शर्यातिकन्याकृतपूजनार्घ-
-
-पाद्यादिना तोषितचित्तवृत्ती
-
-\twolineshloka
+\fourlineindentedshloka
+{शर्यातिकन्याकृतपूजनार्घ-}
+{पाद्यादिना तोषितचित्तवृत्ती}
 {तावूचतुः स्नेहवशेन सुन्दरौ}
 {वरं वृणुष्वेति मनोहराङ्गीम्}% ९
 
@@ -21263,7 +21257,7 @@
 
 \twolineshloka
 {पुत्रैः सह महातेजा ववन्दे मुनिसत्तमम्}
-{धन्योऽहमस्मीति वदन्हर्षेण रघुनन्दनं}% ११०
+{धन्योऽहमस्मीति वदन्हर्षेण रघुनन्दनम्}% ११०
 
 \twolineshloka
 {अर्चयामास विधिना निवेश्य परमासने}
